Fix: HamburgerIcon now aligns with text when expanded

--- a/src/CSS/AppHeader.css
+++ b/src/CSS/AppHeader.css
@@ -78,8 +78,9 @@ Media Queries
     }
 
     .topnav.responsive {
-        position: relative;
         display: grid;
+        overflow: hidden;
+        align-items: center;
     }
 
     .topnav .Flex {
