--- a/src/CSS/HamburgerIcon.css
+++ b/src/CSS/HamburgerIcon.css
@@ -8,6 +8,11 @@
     outline: none;
 }
 
+.IconContainer.expanded {
+    top: 1.25vh;
+}
+
+
 .bar1,
 .bar2,
 .bar3 {
@@ -30,46 +35,6 @@
 .expanded .bar3 {
     -webkit-transform: rotate(45deg) translate(-8px, -8px);
     transform: rotate(45deg) translate(-8px, -8px);
-}
-
-@media only screen and (max-width: 300px) {
-    .IconContainer.expanded {
-        top: 4% !important;
-    }
-
-    .IconContainer {
-        top: 0.75% !important;
-    }
-}
-
-@media only screen and (min-width: 300px) and (max-width: 350px) {
-    .IconContainer {
-        top: 0.75% !important;
-    }
-
-    .IconContainer.expanded {
-        top: 3% !important;
-    }
-}
-
-@media only screen and (min-width: 350px) and (max-width: 550px) {
-    .IconContainer {
-        top: 0.7% !important;
-    }
-
-    .IconContainer.expanded {
-        top: 4% !important;
-    }
-}
-
-@media only screen and (min-width: 550px) and (max-width: 600px) {
-    .IconContainer {
-        top: 0.75% !important;
-    }
-
-    .IconContainer.expanded {
-        top: 4.25% !important;
-    }
 }
 
 @media only screen and (min-width: 600px) {
